{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 743,
  "lineage": "a1b36aaf-9d50-344c-1403-f203653fad86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:599243441100:instance/i-0346d666586ae818c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0346d666586ae818c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Nexus",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05164cfcfe5709db6",
            "private_dns": "ip-172-31-21-231.us-west-2.compute.internal",
            "private_ip": "172.31.21.231",
            "public_dns": "ec2-34-214-157-153.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.157.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d55657603a87337",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4a54672d",
            "tags": {
              "Environment": "default"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-cbe0dfb0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:599243441100:internet-gateway/igw-06c00b288c7daea13",
            "id": "igw-06c00b288c7daea13",
            "owner_id": "599243441100",
            "tags": {
              "Name": "terraform-eks-gw"
            },
            "vpc_id": "vpc-0b015c8041eb4a7df"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_rte",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-028d4ade04fa13449",
            "owner_id": "599243441100",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c00b288c7daea13",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0b015c8041eb4a7df"
          },
          "dependencies": [
            "aws_internet_gateway.new_gw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new_cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:599243441100:security-group/sg-0460207c64b43f692",
            "description": "Cluster Communication with worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0460207c64b43f692",
            "ingress": [],
            "name": "terraform-eks-new-cluster",
            "name_prefix": "",
            "owner_id": "599243441100",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks.new"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b015c8041eb4a7df"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "new_cluster_ingress_workstation_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "49.207.131.174/32"
            ],
            "description": "Allow workstation to communicate with teh cluster API Server",
            "from_port": 443,
            "id": "sgrule-2195137322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0460207c64b43f692",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.new_cluster",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new_sub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:599243441100:subnet/subnet-07c2006cc51488014",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07c2006cc51488014",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599243441100",
            "tags": {
              "Name": "terraform-eks-new-node",
              "kubernates.io/cluster/terraform-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b015c8041eb4a7df"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:599243441100:subnet/subnet-02ea28cc298c50fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02ea28cc298c50fde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599243441100",
            "tags": {
              "Name": "terraform-eks-new-node",
              "kubernates.io/cluster/terraform-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b015c8041eb4a7df"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:599243441100:vpc/vpc-0b015c8041eb4a7df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb67821e4eac68be",
            "default_route_table_id": "rtb-08a22073f1417572d",
            "default_security_group_id": "sg-0041783517ed44ff3",
            "dhcp_options_id": "dopt-fe541f99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b015c8041eb4a7df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a22073f1417572d",
            "owner_id": "599243441100",
            "tags": {
              "Name": "terraform-eks-new-node",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}